--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
 }
