--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".JenisKerusakanActivity"></activity>
+        <activity android:name=".DashboardListTeknisiActivity" />
+        <activity android:name=".TeknisiDetailActivity" />
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBclt0nhOw7oqEc5nuXni6vwipOHrYUGVg" />
 
-        <activity android:name=".RegisActivity"></activity>
+        <activity android:name=".RegisActivity" />
         <activity android:name=".DashboarCusActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
