--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".JenisKerusakanActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ConfirmasiKerusakan"></activity>
+        <activity android:name=".JenisKerusakanActivity" />
         <activity android:name=".DashboardListTeknisiActivity" />
         <activity android:name=".TeknisiDetailActivity" />
 
